# jupychat

./: .env.example  .gitignore  LICENSE  README.md  Taskfile.yaml  pyproject.toml
docs/: Auth0.md  OAuth.md  Try it out.md
jupychat/: app_utils.py  auth.py  images.py  kernels.py  main.py  models.py  settings.py  suggestions.py
jupychat/routes/: api.py  auth.py  root.py
jupychat/templates/: ai-plugin.yaml
notebookgpt/: app_utils.py  auth.py  kernels.py  main.py  models.py  settings.py
notebookgpt/routes/: api.py  auth.py  root.py
notebookgpt/templates/: ai-plugin.yaml
